--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
+    "@types/aos": "^3.0.7",
+    "aos": "^2.3.4",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
