--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "aos": "^2.3.4",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "swiper": "^11.1.8"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
